--- a/Develop/index.html
+++ b/Develop/index.html
@@ -19,8 +19,7 @@
         </div>
         <div class="weather">
             <h2 class="city">Weather in San Antonio</h2>
-            <div class="temp">50°F</div>
-            <img src="" alt="" class="icon"/>
+            <h1 class="temp">50°F</h1>
             <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 60%</div>
             <div class="wind">Wind Speed: 6.2 km/h</div>
